<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_edit_todo_item_title">Add or Edit todo item</string>
    <string name="create_new_todo_item_title">New</string>
    <string name="edit_todo_item_title">Edit</string>
    <string name="title_hint">Title *</string>
    <string name="description_hint">Description</string>
    <string name="urgent_title">Urgent</string>
    <string name="tags_hint">Tags</string>
    <string name="error_todo_item_title">Title is required field.</string>



    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add_edit">SAVE</string>
    <string name="todo_delete_title">Remove</string>
    <string name="todo_sort">Sort</string>
    <string name="todo_sort_by_priority">Priority sort</string>
    <string name="todo_sort_by_custom">Custom sort</string>

    <string name="status_overdue_title">Overdue</string>
    <string name="status_urgent_title">Urgent</string>
    <string name="status_urgent_overdue_title">Urgent/Overdue</string>
    <string name="status_done_title">Done</string>
    <string name="status_none_title"/>

</resources>
